Revise README for JavaFX application setup
Updated instructions for running the JavaFX application and removed redundant steps.